--- a/streamer/Dockerfile
+++ b/streamer/Dockerfile
@@ -1,10 +1,10 @@
-# spike/Dockerfile
+# streamer/Dockerfile
 FROM python:3.13-slim
 
 WORKDIR /app
 
-COPY watcher.py .
-COPY requirements.txt ./
+COPY ticker.py .
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
