--- a/streamer/Dockerfile
+++ b/streamer/Dockerfile
@@ -9,3 +9,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 CMD ["python", "ticker.py"]
+# Expose the port if needed
