--- a/spike/Dockerfile.prod
+++ b/spike/Dockerfile.prod
@@ -3,6 +3,8 @@ FROM python:3.13-slim
 
 WORKDIR /app
 
+COPY watcher.py .
+COPY requirements.txt ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
