--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.13-slim
 
 WORKDIR /app
 
+COPY main.py .
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir fastapi uvicorn redis
 
