--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./streamer:/app
     working_dir: /app
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 8001
+    command: python ticker.py
     environment:
       - KITE_API_KEY=${KITE_API_KEY}
       - KITE_ACCESS_TOKEN=${KITE_ACCESS_TOKEN}
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./spike:/app
     working_dir: /app
-    command: python main.py
+    command: python watcher.py
     environment:
       - REDIS_HOST=redis
       - DB_HOST=db
