--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,33 @@ services:
     ports:
       - "6379:6379"
 
-  ticker-streamer:
+  # ticker-streamer:
+  #   build: ./streamer
+  #   container_name: ticker-streamer
+  #   volumes:
+  #     - ./streamer:/app
+  #   working_dir: /app
+  #   command: python ticker.py
+  #   environment:
+  #     - KITE_API_KEY=${KITE_API_KEY}
+  #     - KITE_ACCESS_TOKEN=${KITE_ACCESS_TOKEN}
+  #     - REDIS_HOST=redis
+  #   depends_on:
+  #     - redis
+
+  dummy-streamer:
     build: ./streamer
-    container_name: ticker-streamer
+    container_name: dummy-streamer
+    dockerfile: Dockerfile.dummy
     volumes:
       - ./streamer:/app
     working_dir: /app
     command: python dummy_streamer.py
     environment:
-      - KITE_API_KEY=${KITE_API_KEY}
-      - KITE_ACCESS_TOKEN=${KITE_ACCESS_TOKEN}
       - REDIS_HOST=redis
     depends_on:
       - redis
+
 
   spike-watcher:
     build: ./spike
