--- a/streamer/Dockerfile.dummy
+++ b/streamer/Dockerfile.dummy
@@ -4,6 +4,7 @@ FROM python:3.13-slim
 WORKDIR /app
 
 COPY requirements.txt ./
+COPY dummy_streamer.py .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
