--- a/streamer/Dockerfile
+++ b/streamer/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.13-slim
 WORKDIR /app
 
 COPY requirements.txt ./
+COPY ticker.py .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
