--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
   #     - redis
 
   dummy-streamer:
-    build: ./streamer
+    build:
+      context: ./dummy
+      dockerfile: Dockerfile.dummy
     container_name: dummy-streamer
-    dockerfile: Dockerfile.dummy
     volumes:
-      - ./streamer:/app
+      - ./dummy:/app
     working_dir: /app
     command: python dummy_streamer.py
     environment:
