--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,3 +70,21 @@ services:
       - "8080:80"
     depends_on:
       - api-server
+
+  caddy:
+    image: caddy:alpine
+    container_name: caddy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - api-server
+
+volumes:
+  caddy_data:
+  caddy_config:
+
